--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "github-api-client",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Client for Github API v3.",
-  "main": "app.js",
+  "main": "./dist/github-api-client.js",
   "scripts": {
     "clear": "rimraf dist/*",
     "build": "npm run clear && ./node_modules/.bin/webpack --colors --progress",
