--- a/package.json
+++ b/package.json
@@ -32,7 +32,5 @@
     "webpack": "^3.8.1",
     "webpack-dev-server": "^3.1.11"
   },
-  "dependencies": {
-    "axios": "^0.18.0"
-  }
+  "dependencies": {}
 }
